fix: fix overflow-x

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -12,7 +12,7 @@ body {
     line-height: 13px;
     color: #222222;
     background-color: #EEEEEE;
-    overflow: hidden;
+    overflow-x: hidden;
     // Подстраховка, чтобы шрифты были чёткими
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
